--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "jest": "^29.7.0",
+    "msw": "^2.0.9",
     "node-mocks-http": "^1.13.0",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
